Practically ready for iPad 🤘🏼 Known "Bug": User has to swipe from the left on portrait (iPad) to reveal the master view controller. Landscape works fine. Storyboard migrated to use size classes correctly. New implementation for AddEditEventViewController, now using a static table view. Ability to collapse and expand start and end dates added.

--- a/enHueco/Info.plist
+++ b/enHueco/Info.plist
@@ -37,6 +37,9 @@
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
