Added image upload functionality with animations, and other minor fixes

--- a/enHueco watchOS/Info.plist
+++ b/enHueco watchOS/Info.plist
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>deego.enHueco</string>
+	<string>diegoalejogm.enHueco</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
