--- a/enHueco watchOS Extension/Info.plist
+++ b/enHueco watchOS Extension/Info.plist
@@ -37,7 +37,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>deego.enHueco.watchkitapp</string>
+			<string>diegoalejogm.enHueco.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
