--- a/enHueco watchOS Extension/Info.plist
+++ b/enHueco watchOS Extension/Info.plist
@@ -46,5 +46,11 @@
 	<string>$(PRODUCT_MODULE_NAME).InterfaceController</string>
 	<key>WKExtensionDelegateClassName</key>
 	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
+    
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key><true/>
+    </dict>
+    
 </dict>
 </plist>
