Changed bundle identifiers.

--- a/enHueco watchOS Extension/Info.plist
+++ b/enHueco watchOS Extension/Info.plist
@@ -42,7 +42,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.diegomontoyas.enHueco.watchkitapp</string>
+			<string>com.ncodde.enHueco.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
